--- a/index.html
+++ b/index.html
@@ -1,20 +1,39 @@
+
+<!--TAke this and make it your own with pics and colors!-->
 <html>
-<head>
+   <head>
+    <!--Name your Resturant Below-->
      <title>Restaurant</title>
-     <link rel="stylesheet" href="navbar.css">
+     <link rel = "stylesheet" href = "navbar.css">
    </head>
    <body>
-     <ul id="topNav">
-       <li><a href="https://www.google.com">FIND</a></li>
-       <li><a href="https://www.ibo.org">INFO</a></li>
-       <li><a href="https://www.npr.org">NEWS</a></li>
+     <!--Update with Location, About, Staff, Events, Catering Etc.-->
+     <ul id = "topNav">
+       <li><a href = "catering.html">CATERING</a></li>
+       <li><a href = "about.html">ABOUT</a></li>
+       <li><a href = "index.html">HOME</a></li>
      </ul>
 
-     <ul>
-       <li>test</li>
-       <li>test</li>
-       <li>test</li>
-     </ul>
+     <!--5 Menu items that make sense with your theme-->
+     <ul id = "menuNav">
+       <li><a href = "Sam.html">Samosa</a></li>
+       <li><a href = "Mirchi.html">Cut Mirchi</a></li>
+       <li><a href = "Naan.html">Naan</a></li>
+         <li><a href = "Biryani.html">Biryani</a></li>
+         <li><a href = "Rose.html">Rose Milk</a></li>
+          </ul>
 
-   
-</body></html>
+     <!--Restaurant Content, Changes for the various pages-->
+     <div>
+        <center>
+         <img src = "Title.png" alt = "Title" height="150" width="350">
+           <p id ="slogan">Get your curry when you're in a hurry</p>
+              <img src = "Indian_image.jpg" alt = "Indian_image">
+            <p id ="slogan">Get a taste of India to go!</p>
+
+           <hr>
+           <p>Created By: Mihir Maruvada. Updated: Sept 2020</p>
+        </center>
+     </div>
+   </body>
+</html>
