--- a/catering.html
+++ b/catering.html
@@ -21,7 +21,7 @@
        <center>/
 
  <h1 id ="tit">Catering</h1>
-    <img src = "cateringpic.jpg" alt = "not found" height="300px" width="300px">
+    <img src="Cateringpic.jpg" alt = "not found" height="300px" width="300px">
    <h2 id ="tit">We Cater!</h2>
    <p id ="slogan">Looking for someone to cater at a party?</p>
    <p id ="slogan">Well look no more because, We are the right people for the job!</p>
